<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>dk.ku.di.dms.vms</groupId>
    <artifactId>vms-runtime-java</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>sdk-embed</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>sdk-embed</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>18</maven.compiler.source>
    <maven.compiler.target>18</maven.compiler.target>
  </properties>

  <dependencies>

    <!-- modb -->
    <dependency>
      <groupId>dk.di.ku.dms.vms.modb</groupId>
      <artifactId>modb</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>

    <!-- sdk-core -->
    <dependency>
        <groupId>dk.ku.di.dms.vms</groupId>
        <artifactId>sdk-core</artifactId>
        <version>1.0-SNAPSHOT</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>18</source>
          <target>18</target>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.foreign</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
